Morgan Stanley modifications for pipeline builds, etc.